Fix celeb wall causing blue margin on entire page, on mobile home page.

--- a/assets/sass/components/_celeb-wall.scss
+++ b/assets/sass/components/_celeb-wall.scss
@@ -21,7 +21,7 @@
     margin-bottom: em(16);
     .headshots {
       .headshot {
-        @include default-transition;      
+        @include default-transition;
         width: em(120);
         &:hover {
          opacity: 1;
@@ -32,14 +32,10 @@
         margin-top: 0;
         font-size: em(18);
         line-height: 1.3;
-        width: 114%;
-        margin-left: -7%;
       }
       p {
         font-size: em(16);
         line-height: 1.3;
-        width: 114%;
-        margin-left: -7%;
       }
     }
     &.active {
@@ -83,6 +79,18 @@
       font-size: em(26);
     }
   }
+  .single {
+    .headshots {
+      h3 {
+        width: 114%;
+        margin-left: -7%;
+      }
+      p {
+        width: 114%;
+        margin-left: -7%;
+      }
+    }
+  }
 }
 
 //  Large Tablet
@@ -104,13 +112,13 @@
     .single {
       @include default-transition;
       margin-top: em(40);
-      display: inline-block;      
+      display: inline-block;
       max-width: em(150);
       // width: 13%; // if 7 celebs
       width: 16%; // if 6 celebs
       vertical-align: top;
       .headshots {
-        .headshot {          
+        .headshot {
           opacity: 0.6;
           width: 80%;
           &:hover {
@@ -144,7 +152,7 @@
     padding-bottom: em(60);
     padding-top: em(110);
     min-height: em(780);
-    h2 {      
+    h2 {
       font-size: em(40);
     }
     .single {
@@ -162,4 +170,3 @@
     }
   }
 }
-
